# poo1_SP3_v2020_2_template

./: CMakeLists.txt  README.md  SP3.cpp  SP3.h  cppcheck_test.cpp  generate_zip.sh  test_1.cpp  test_1.in  test_2.cpp  test_2.in  test_3.cpp  test_3.in  test_4.cpp  test_4.in  test_5.cpp  test_5.in
